package NProto;

message TVariablesDump {
    message TVariable {
        optional string Name = 1;
        optional string Value = 2;
    }

    repeated TVariable Variable = 1;
    optional uint64 UpdateTimestamp = 2;
}
